# querycreator

./: .gitignore  README.md  pyproject.toml
data/dictionaries/: _template.yaml  sample_production.yaml
data/knowledge/: sample_production.yaml
docs/: admin-guide.md  api-reference.md  onboarding-guide.md  safety-rules.md  setup-guide.md
docs/superpowers/plans/: 2026-04-10-querycreator-implementation.md
docs/superpowers/specs/: 2026-04-09-querycreator-design.md
prompts/: system_prompt.md
scripts/: ultra-plan-prompt.md
src/querycreator/: __init__.py  app.py
src/querycreator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/querycreator/admin/: __init__.py  cli.py
src/querycreator/config/: db_config.py  safety_rules.py  schema_config.py
src/querycreator/core/metadata/: __init__.py  catalog.py  collector.py  dictionary.py  knowledge.py
src/querycreator/core/query/: __init__.py  executor.py  formatter.py  validator.py
src/querycreator/core/tools/: __init__.py  call_function.py  execute_query.py  get_metadata.py
src/querycreator/db/: __init__.py  connection.py  mock_connection.py
src/querycreator/logging/: __init__.py  analyzer.py  query_log.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_catalog.py  test_cli.py  test_collector.py  test_db_connection.py  test_dictionary.py  test_e2e.py  test_executor.py  test_formatter.py  test_knowledge.py  test_query_log.py  test_tools.py  test_validator.py
