[project]
name = "querycreator"
version = "0.1.0"
description = "LLM-powered Oracle DB query generator for Steel Agent"
requires-python = ">=3.11"
dependencies = [
    "oracledb>=2.0.0",
    "pyyaml>=6.0",
    "sqlparse>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
admin = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
]
cli = [
    "click>=8.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
